ui: fix position shift of end statistics

--- a/components/EndCard/EndCard.module.scss
+++ b/components/EndCard/EndCard.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   width: 100%;
   max-width: 750px;
-  margin: auto;
+  margin: 2rem;
   border-radius: 4px;
   z-index: 2;
   padding: 0 1rem;
@@ -85,7 +85,6 @@
 @media (min-width: 600px) {
   .wrapper {
     width: calc(100% - 1rem);
-    padding: 2rem;
     &__title {
       font-size: 2.75rem;
     }
