--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -1,6 +1,8 @@
 .container {
   min-height: 100vh;
   padding: 1rem;
+  align-items: center;
+  justify-content: center;
   position: relative;
   display: flex;
   flex-direction: column;
