--- a/styles/Spelling.module.scss
+++ b/styles/Spelling.module.scss
@@ -2,6 +2,8 @@
   min-height: 100vh;
   padding: 1rem;
   position: relative;
+  align-items: center;
+  justify-content: center;
   display: flex;
   flex-direction: column;
   overflow: hidden;
